# cowrie

./: .gitignore  Cowrie_Wallet.html  DEMO_SCRIPT.md  PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PLAN.md  README.md  STUDY.md
circuits/: README.md  package.json
circuits/scripts/: compile.sh  groth16_setup.sh  ptau.sh  setup.sh  snarkjs_to_soroban.py  vk_to_rust_const.py
circuits/src/: keypair.circom  merkleProof.circom  merkleTree.circom  merkleTreeUpdater.circom  paymentReceipt.circom  policyTransaction.circom  policy_tx_2_2.circom  selectiveDisclosure.circom  selectiveDisclosure_1.circom  transaction.circom
circuits/src/poseidon2/: poseidon2_compress.circom  poseidon2_const.circom  poseidon2_hash.circom  poseidon2_perm.circom
circuits/src/smt/: smthash_poseidon2.circom  smtverifier.circom  smtverifierlevel.circom
contracts/: Cargo.toml
contracts/asp/: Cargo.toml
contracts/asp/src/: lib.rs
contracts/pool/: Cargo.toml
contracts/pool-usdc/: Cargo.toml
contracts/pool-usdc/src/: lib.rs  merkle.rs
contracts/pool/src/: lib.rs
contracts/soroban-utils/: Cargo.toml
contracts/soroban-utils/src/: constants.rs  lib.rs  poseidon2.rs  utils.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs  vk.rs
deployments/testnet/: phase2.json  phase3.json  phase5.json  r0-change.json  r1.json  r10-pool-redeploy.json  r2-1.json  r2-usdc.json  r3.json  r4.json  r5.json  r6.json  r7-redeploy.json  r8-pool-redeploy.json  r9-pool-redeploy.json  receipt-ui.json  receipt.json  sample_proof.json  sample_public.json
mock-anchor/: package.json  tsconfig.json
mock-anchor/src/: index.ts
scratchpad/: deploy-r1.sh  deploy-r2.sh  r6-verify-record.mjs
scratchpad/verifier-build/: Cargo.toml
scratchpad/verifier-build/circuit-keys/: Cargo.toml
scratchpad/verifier-build/circuit-keys/src/: lib.rs
scratchpad/verifier-build/types/: Cargo.toml
scratchpad/verifier-build/types/src/: lib.rs
scratchpad/verifier-build/verifier/: Cargo.toml  build.rs
scratchpad/verifier-build/verifier/src/: lib.rs
scratchpad/zk/: Cargo.toml
scratchpad/zk/poseidon2/src/fields/: utils.rs
scratchpad/zk/poseidon2/src/poseidon2/: poseidon2.rs  poseidon2_instance_babybear.rs  poseidon2_instance_bls12.rs  poseidon2_instance_pallas.rs  poseidon2_instance_vesta.rs  poseidon2_params.rs
scratchpad/zk/poseidon2/tests/: poseidon2_test.rs
scratchpad/zk/wgen/: Cargo.toml
scratchpad/zk/wgen/src/: main.rs
scripts/: deploy.sh  e2e.sh  e2e_phase2.sh
web/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/anchor/quote/: route.ts
web/app/api/anchor/settle/: route.ts
web/app/api/asp-vouch/: route.ts
web/app/merchant/: page.tsx
web/app/mock-anchor/: page.tsx
web/app/verify/: page.tsx
web/lib/: coinSelection.ts  config.ts  contracts.ts  merchant.ts  merchantWallet.ts  names.ts  paylink.ts  prover.ts  receiptProver.ts  wallet.ts  wasmWitness.ts
web/lib/cowrie_wasm/: cowrie_wasm.d.ts  cowrie_wasm.js
web/public/circuits/: cowrie_wasm_bg.wasm  verification_key.json
web/public/circuits/receipt/: paymentReceipt.wasm  receipt_final.zkey  receipt_vk.json
web/scripts/: change-e2e.mjs  live-e2e.mjs  merchant-e2e.mjs  onboard_diag.mjs  onboard_probe.mjs  persistence-test.mjs  r1-browser-e2e.mjs  r1-receipt-verify-e2e.mjs  r2-usdc-e2e.mjs  r21-migration-e2e.mjs  r3-e2e.mjs  r4-e2e.mjs  r4-shot.mjs  r5-e2e.mjs  r5-shot.mjs  r5-shot2.mjs  r6-e2e.mjs  r6-repro.mjs  r6-shot.mjs  r6b-e2e.mjs  r6c-shot.mjs  r6d-e2e.mjs  r6d-shot.mjs  r7-e2e.mjs  receipt-e2e.mjs  receipt-live-e2e.mjs  rf-e2e.mjs  ui-e2e.mjs
web/types/: snarkjs.d.ts
web/wasm-witness/: Cargo.toml
web/wasm-witness/src/: lib.rs
web/wasm-witness/zkhash/: Cargo.toml  poseidon2_rust_params.sage  poseidon2_rust_params.sage.py
web/wasm-witness/zkhash/src/: lib.rs
web/wasm-witness/zkhash/src/fields/: babybear.rs  goldilocks.rs  mod.rs  pallas.rs
web/wasm-witness/zkhash/src/poseidon2/: mod.rs  poseidon2_instance_bn256.rs  poseidon2_instance_goldilocks.rs
