[package]
name = "cowrie-wasm"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
zkhash = { path = "zkhash" }
ark-ff = { version = "0.6.0", default-features = false }
num-bigint = "0.4.6"
num-integer = "0.1.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
