[package]
name = "circom-groth16-verifier"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
# workspace
contract-types = { path = "../types" }

# external
soroban-sdk = { version = "26", features = ["alloc"] }

[build-dependencies]
# workspace
circuit-keys = { path = "../circuit-keys" }

# external
ark-bn254 = { version = "0.6.0", default-features = false, features = ["curve"] }
serde_json = { version = "1", features = ["std"] }

