[package]
name = "wgen"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "wgen"
path = "src/main.rs"

[dependencies]
zkhash = { path = "../poseidon2" }
ark-ff = { version = "0.6.0", default-features = false }
num-bigint = { version = "0.4.6", features = ["serde"] }
num-integer = "0.1.46"
serde_json = "1"
anyhow = "1"
