[package]
name = "zkhash"
version = "0.2.0"
authors = [
    "Markus Schofnegger <mschofnegger@horizenlabs.io>",
    "Roman Walch <roman.walch@iaik.tugraz.at>",
]
description = "Rust implementations of Poseidon2 and similar arithmetization-oriented primitives"
edition = "2018"
license = "Apache-2.0 OR MIT"

[features]
default = []
asm = ["ark-ff/asm"]

[dependencies]
# external
ark-ff = { version = "0.6.0", default-features = false }
cfg-if = "1"
hex = "0.4"
lazy_static = "1.5"
rand = "0.8"

